Everithing complete , just have to conect the students by status to one of the 3 lists